# Django-project

./: pyproject.toml
tutor/snippets/: permissions.py  serializers.py  urls.py  views.py
tutor/snippets/migrations/: 0001_initial.py
tutor/tutor/: settings.py  urls.py
