[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "Django test project"
authors = ["ivmv2007gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
pygments = "^2.18.0"
httpie = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
